Agregando sección Experiencia

--- a/index.html
+++ b/index.html
@@ -220,6 +220,145 @@
             </div>
         </section>
 
+
+
+       <!-- Experience Section -->
+        <section class="section" id="experience" aria-labelledby="experience-title">
+            <div class="container">
+                <h2 class="section__title" id="experience-title">Experiencia Profesional</h2>
+                <div class="experience__timeline">
+                    <article class="experience-item">
+                        <div class="experience-item__icon">
+                            <i class="fas fa-chart-line" aria-hidden="true"></i>
+                        </div>
+                        <div class="experience-item__content">
+                            <div class="experience-item__header">
+                                <h3 class="experience-item__title">Senior Data Scientist</h3>
+                                <div class="experience-item__company">TechCorp Analytics</div>
+                                <div class="experience-item__period">Enero 2022 - Presente</div>
+                            </div>
+                            <div class="experience-item__description">
+                                <p>
+                                    Lidero el equipo de ciencia de datos desarrollando modelos de machine learning para 
+                                    optimización de procesos de negocio. Implementé un sistema de recomendaciones que 
+                                    incrementó las ventas en un 35% y desarrollé pipelines de datos que procesan más 
+                                    de 10TB de información diaria.
+                                </p>
+                                <ul class="experience-item__achievements">
+                                    <li>Diseñé e implementé 15+ modelos de ML en producción</li>
+                                    <li>Reduje costos operativos en $2M anuales mediante automatización</li>
+                                    <li>Mentoré a 6 junior data scientists</li>
+                                </ul>
+                            </div>
+                            <div class="experience-item__skills">
+                                <span class="tag">Python</span>
+                                <span class="tag">TensorFlow</span>
+                                <span class="tag">AWS</span>
+                                <span class="tag">SQL</span>
+                                <span class="tag">Docker</span>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="experience-item">
+                        <div class="experience-item__icon">
+                            <i class="fas fa-database" aria-hidden="true"></i>
+                        </div>
+                        <div class="experience-item__content">
+                            <div class="experience-item__header">
+                                <h3 class="experience-item__title">Data Scientist</h3>
+                                <div class="experience-item__company">FinanceAI Solutions</div>
+                                <div class="experience-item__period">Marzo 2020 - Diciembre 2021</div>
+                            </div>
+                            <div class="experience-item__description">
+                                <p>
+                                    Desarrollé modelos de detección de fraude y análisis de riesgo crediticio para 
+                                    instituciones financieras. Creé dashboards interactivos para monitoreo en tiempo 
+                                    real y optimicé algoritmos existentes mejorando la precisión en un 40%.
+                                </p>
+                                <ul class="experience-item__achievements">
+                                    <li>Desarrollé sistema anti-fraude con 99.2% de precisión</li>
+                                    <li>Automaticé reportes regulatorios, ahorrando 200 horas/mes</li>
+                                    <li>Implementé pipelines de MLOps con CI/CD</li>
+                                </ul>
+                            </div>
+                            <div class="experience-item__skills">
+                                <span class="tag">Scikit-learn</span>
+                                <span class="tag">Pandas</span>
+                                <span class="tag">PostgreSQL</span>
+                                <span class="tag">Tableau</span>
+                                <span class="tag">Git</span>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="experience-item">
+                        <div class="experience-item__icon">
+                            <i class="fas fa-brain" aria-hidden="true"></i>
+                        </div>
+                        <div class="experience-item__content">
+                            <div class="experience-item__header">
+                                <h3 class="experience-item__title">Junior Data Analyst</h3>
+                                <div class="experience-item__company">DataInsights Lab</div>
+                                <div class="experience-item__period">Junio 2018 - Febrero 2020</div>
+                            </div>
+                            <div class="experience-item__description">
+                                <p>
+                                    Analicé grandes volúmenes de datos para identificar patrones y tendencias de mercado. 
+                                    Creé visualizaciones y reportes automatizados que facilitaron la toma de decisiones 
+                                    estratégicas. Colaboré en proyectos de análisis predictivo y segmentación de clientes.
+                                </p>
+                                <ul class="experience-item__achievements">
+                                    <li>Automaticé 80% de los reportes manuales</li>
+                                    <li>Identifiqué oportunidades de mercado valoradas en $5M</li>
+                                    <li>Desarrollé 25+ dashboards para diferentes áreas de negocio</li>
+                                </ul>
+                            </div>
+                            <div class="experience-item__skills">
+                                <span class="tag">R</span>
+                                <span class="tag">Excel</span>
+                                <span class="tag">Power BI</span>
+                                <span class="tag">MongoDB</span>
+                                <span class="tag">Jupyter</span>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="experience-item">
+                        <div class="experience-item__icon">
+                            <i class="fas fa-graduation-cap" aria-hidden="true"></i>
+                        </div>
+                        <div class="experience-item__content">
+                            <div class="experience-item__header">
+                                <h3 class="experience-item__title">Analista de Investigación</h3>
+                                <div class="experience-item__company">Universidad Nacional de Ingeniería</div>
+                                <div class="experience-item__period">Enero 2017 - Mayo 2018</div>
+                            </div>
+                            <div class="experience-item__description">
+                                <p>
+                                    Trabajé en proyectos de investigación aplicando técnicas estadísticas avanzadas 
+                                    para análisis de datos experimentales. Publiqué 3 papers en revistas indexadas 
+                                    y presenté resultados en conferencias internacionales.
+                                </p>
+                                <ul class="experience-item__achievements">
+                                    <li>Publiqué 3 artículos científicos sobre análisis estadístico</li>
+                                    <li>Presenté en 5 conferencias internacionales</li>
+                                    <li>Desarrollé metodología de análisis adoptada por 10+ universidades</li>
+                                </ul>
+                            </div>
+                            <div class="experience-item__skills">
+                                <span class="tag">SPSS</span>
+                                <span class="tag">MATLAB</span>
+                                <span class="tag">LaTeX</span>
+                                <span class="tag">Statistics</span>
+                                <span class="tag">Research</span>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
         <!-- Projects Section -->
         <section class="section" id="projects" aria-labelledby="projects-title">
             <div class="container">
