Agregando sección certificaciones

--- a/index.html
+++ b/index.html
@@ -305,6 +305,39 @@
                         </div>
                     </div>
                     </div>
+                    
+                    <!-- Certificaciones -->
+                    <div class="certifications">
+                        <h3 class="certifications__title">Certificaciones</h3>
+                        <div class="certifications__grid">
+                            <div class="certification-badge">
+                                <a href="https://www.credly.com/badges/87d8d157-cfa5-4d0a-a594-e7834da6470b" 
+                                   target="_blank" 
+                                   rel="noopener noreferrer" 
+                                   class="certification-link"
+                                   aria-label="Ver certificación de Data Analyst en Credly">
+                                    <div class="certification-badge__image">
+                                        <img src="https://images.credly.com/size/340x340/images/015364a4-c68c-4c42-8060-3553118f2ff0/image.png" 
+                                             alt="IBM Data Science Certificate" 
+                                             loading="lazy">
+                                    </div>
+                                    <div class="certification-badge__content">
+                                        <h4 class="certification-badge__title">Data Analyst Certificate</h4>
+                                        <p class="certification-badge__issuer">Google</p>
+                                        <p class="certification-badge__date">2024</p>
+                                    </div>
+                                    <div class="certification-badge__verify">
+                                        <i class="fas fa-external-link-alt" aria-hidden="true"></i>
+                                        <span>Verificar credencial</span>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+                    </div>
                     </div>
                 </div>
             </div>
