--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Elvis Donayre - Data Scientist | Portfolio">
     <meta property="og:description" content="Portfolio profesional de Data Science">
-    <meta property="og:image" content="./src/assets/images/og-image.jpg">
+    <meta property="og:image" content="./src/assets/images/foto_perfil.jpg">
     <meta property="og:url" content="https://tu-dominio.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Portfolio Profesional">
@@ -318,8 +318,11 @@
                                    aria-label="Ver certificación de Data Analyst en Credly">
                                     <div class="certification-badge__image">
                                         <img src="https://images.credly.com/size/340x340/images/015364a4-c68c-4c42-8060-3553118f2ff0/image.png" 
-                                             alt="IBM Data Science Certificate" 
-                                             loading="lazy">
+                                             alt="Google Data Analyst Certificate" 
+                                             loading="lazy"
+                                             width="120"
+                                             height="120"
+                                             decoding="async">
                                     </div>
                                     <div class="certification-badge__content">
                                         <h4 class="certification-badge__title">Data Analyst Certificate</h4>
