Eliminación del bloque de contacto y reestructuración de la sección de habilidades, agrupando habilidades en categorías. Se ajustaron estilos CSS para mejorar la presentación y se desactivó la animación del slider de habilidades en JavaScript.

--- a/index.html
+++ b/index.html
@@ -244,215 +244,12 @@
                     </div>
 
                     <!-- Contacto -->
-                    <div class="bento-item bento-contact" id="contact">
-                        <h3 class="bento-title" style="font-size: var(--font-size-xl);">Contacto</h3>
-                        <div class="contact-item">
-                            <div class="contact-icon">
-                                <i class="fas fa-envelope"></i>
-                            </div>
-                            <div class="contact-text">ejoel.donayrep@gmail.com</div>
-                        </div>
-                        <div class="contact-item">
-                            <div class="contact-icon">
-                                <i class="fas fa-map-marker-alt"></i>
-                            </div>
-                            <div class="contact-text">Pucallpa, Ucayali, Perú</div>
-                        </div>
-                        <div class="contact-item">
-                            <div class="contact-icon">
-                                <i class="fas fa-clock"></i>
-                            </div>
-                            <div class="contact-text">Lun-Vie 9:00-18:00</div>
-                        </div>
-                    </div>
+                    <!-- Bloque eliminado por solicitud del usuario -->
                 </div>
             </div>
         </section>
 
-        <!-- Skills Slider -->
-        <section class="skills-slider" aria-label="Mis habilidades técnicas">
-            <div class="skills-track">
-                <!-- Primera iteración de skills -->
-                <div class="skill-item skill-python">
-                    <div class="skill-icon"><i class="fab fa-python"></i></div>
-                    <div class="skill-name">Python</div>
-                </div>
-                <div class="skill-item skill-r">
-                    <div class="skill-icon"><i class="fab fa-r-project"></i></div>
-                    <div class="skill-name">R</div>
-                </div>
-                <div class="skill-item skill-tensorflow">
-                    <div class="skill-icon"><i class="fas fa-brain"></i></div>
-                    <div class="skill-name">TensorFlow</div>
-                </div>
-                <div class="skill-item skill-scikit">
-                    <div class="skill-icon"><i class="fas fa-robot"></i></div>
-                    <div class="skill-name">Scikit-learn</div>
-                </div>
-                <div class="skill-item skill-pytorch">
-                    <div class="skill-icon"><i class="fas fa-fire"></i></div>
-                    <div class="skill-name">PyTorch</div>
-                </div>
-                <div class="skill-item skill-pandas">
-                    <div class="skill-icon"><i class="fas fa-table"></i></div>
-                    <div class="skill-name">Pandas</div>
-                </div>
-                <div class="skill-item skill-numpy">
-                    <div class="skill-icon"><i class="fas fa-calculator"></i></div>
-                    <div class="skill-name">NumPy</div>
-                </div>
-                <div class="skill-item skill-matplotlib">
-                    <div class="skill-icon"><i class="fas fa-chart-line"></i></div>
-                    <div class="skill-name">Matplotlib</div>
-                </div>
-                <div class="skill-item skill-seaborn">
-                    <div class="skill-icon"><i class="fas fa-chart-bar"></i></div>
-                    <div class="skill-name">Seaborn</div>
-                </div>
-                <div class="skill-item skill-plotly">
-                    <div class="skill-icon"><i class="fas fa-chart-area"></i></div>
-                    <div class="skill-name">Plotly</div>
-                </div>
-                <div class="skill-item skill-powerbi">
-                    <div class="skill-icon"><i class="fas fa-chart-pie"></i></div>
-                    <div class="skill-name">Power BI</div>
-                </div>
-                <div class="skill-item skill-tableau">
-                    <div class="skill-icon"><i class="fas fa-chart-column"></i></div>
-                    <div class="skill-name">Tableau</div>
-                </div>
-                <div class="skill-item skill-sql">
-                    <div class="skill-icon"><i class="fas fa-database"></i></div>
-                    <div class="skill-name">SQL</div>
-                </div>
-                <div class="skill-item skill-nosql">
-                    <div class="skill-icon"><i class="fas fa-leaf"></i></div>
-                    <div class="skill-name">NoSQL</div>
-                </div>
-                <div class="skill-item skill-bigquery">
-                    <div class="skill-icon"><i class="fab fa-google"></i></div>
-                    <div class="skill-name">BigQuery</div>
-                </div>
-                <div class="skill-item skill-firebase">
-                    <div class="skill-icon"><i class="fas fa-fire"></i></div>
-                    <div class="skill-name">Firebase</div>
-                </div>
-                <div class="skill-item skill-jupyter">
-                    <div class="skill-icon"><i class="fas fa-book"></i></div>
-                    <div class="skill-name">Jupyter</div>
-                </div>
-                <div class="skill-item skill-streamlit">
-                    <div class="skill-icon"><i class="fas fa-rocket"></i></div>
-                    <div class="skill-name">Streamlit</div>
-                </div>
-                <div class="skill-item skill-aws">
-                    <div class="skill-icon"><i class="fab fa-aws"></i></div>
-                    <div class="skill-name">AWS</div>
-                </div>
-                <div class="skill-item skill-gcp">
-                    <div class="skill-icon"><i class="fab fa-google"></i></div>
-                    <div class="skill-name">Google Cloud</div>
-                </div>
-                <div class="skill-item skill-docker">
-                    <div class="skill-icon"><i class="fab fa-docker"></i></div>
-                    <div class="skill-name">Docker</div>
-                </div>
-                <div class="skill-item skill-git">
-                    <div class="skill-icon"><i class="fab fa-git-alt"></i></div>
-                    <div class="skill-name">Git</div>
-                </div>
-
-                <!-- Segunda iteración para el loop infinito -->
-                <div class="skill-item skill-python">
-                    <div class="skill-icon"><i class="fab fa-python"></i></div>
-                    <div class="skill-name">Python</div>
-                </div>
-                <div class="skill-item skill-r">
-                    <div class="skill-icon"><i class="fab fa-r-project"></i></div>
-                    <div class="skill-name">R</div>
-                </div>
-                <div class="skill-item skill-tensorflow">
-                    <div class="skill-icon"><i class="fas fa-brain"></i></div>
-                    <div class="skill-name">TensorFlow</div>
-                </div>
-                <div class="skill-item skill-scikit">
-                    <div class="skill-icon"><i class="fas fa-robot"></i></div>
-                    <div class="skill-name">Scikit-learn</div>
-                </div>
-                <div class="skill-item skill-pytorch">
-                    <div class="skill-icon"><i class="fas fa-fire"></i></div>
-                    <div class="skill-name">PyTorch</div>
-                </div>
-                <div class="skill-item skill-pandas">
-                    <div class="skill-icon"><i class="fas fa-table"></i></div>
-                    <div class="skill-name">Pandas</div>
-                </div>
-                <div class="skill-item skill-numpy">
-                    <div class="skill-icon"><i class="fas fa-calculator"></i></div>
-                    <div class="skill-name">NumPy</div>
-                </div>
-                <div class="skill-item skill-matplotlib">
-                    <div class="skill-icon"><i class="fas fa-chart-line"></i></div>
-                    <div class="skill-name">Matplotlib</div>
-                </div>
-                <div class="skill-item skill-seaborn">
-                    <div class="skill-icon"><i class="fas fa-chart-bar"></i></div>
-                    <div class="skill-name">Seaborn</div>
-                </div>
-                <div class="skill-item skill-plotly">
-                    <div class="skill-icon"><i class="fas fa-chart-area"></i></div>
-                    <div class="skill-name">Plotly</div>
-                </div>
-                <div class="skill-item skill-powerbi">
-                    <div class="skill-icon"><i class="fas fa-chart-pie"></i></div>
-                    <div class="skill-name">Power BI</div>
-                </div>
-                <div class="skill-item skill-tableau">
-                    <div class="skill-icon"><i class="fas fa-chart-column"></i></div>
-                    <div class="skill-name">Tableau</div>
-                </div>
-                <div class="skill-item skill-sql">
-                    <div class="skill-icon"><i class="fas fa-database"></i></div>
-                    <div class="skill-name">SQL</div>
-                </div>
-                <div class="skill-item skill-nosql">
-                    <div class="skill-icon"><i class="fas fa-leaf"></i></div>
-                    <div class="skill-name">NoSQL</div>
-                </div>
-                <div class="skill-item skill-bigquery">
-                    <div class="skill-icon"><i class="fab fa-google"></i></div>
-                    <div class="skill-name">BigQuery</div>
-                </div>
-                <div class="skill-item skill-firebase">
-                    <div class="skill-icon"><i class="fas fa-fire"></i></div>
-                    <div class="skill-name">Firebase</div>
-                </div>
-                <div class="skill-item skill-jupyter">
-                    <div class="skill-icon"><i class="fas fa-book"></i></div>
-                    <div class="skill-name">Jupyter</div>
-                </div>
-                <div class="skill-item skill-streamlit">
-                    <div class="skill-icon"><i class="fas fa-rocket"></i></div>
-                    <div class="skill-name">Streamlit</div>
-                </div>
-                <div class="skill-item skill-aws">
-                    <div class="skill-icon"><i class="fab fa-aws"></i></div>
-                    <div class="skill-name">AWS</div>
-                </div>
-                <div class="skill-item skill-gcp">
-                    <div class="skill-icon"><i class="fab fa-google"></i></div>
-                    <div class="skill-name">Google Cloud</div>
-                </div>
-                <div class="skill-item skill-docker">
-                    <div class="skill-icon"><i class="fab fa-docker"></i></div>
-                    <div class="skill-name">Docker</div>
-                </div>
-                <div class="skill-item skill-git">
-                    <div class="skill-icon"><i class="fab fa-git-alt"></i></div>
-                    <div class="skill-name">Git</div>
-                </div>
-            </div>
-        </section>
+        
 
         <!-- Projects Section -->
         <section class="section" id="projects" aria-labelledby="projects-title">
@@ -552,6 +349,125 @@
                             </a>
                         </div>
                     </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- Skills Section (movido después de Proyectos) -->
+        <section class="skills-slider" id="skills" aria-labelledby="skills-title">
+            <h2 class="section__title" id="skills-title">Mis Habilidades</h2>
+            <div class="skills-track">
+                <!-- Lenguajes -->
+                <div class="skills-group">
+                    <div class="skills-group-title">Lenguajes</div>
+                    <div class="skills-group-items">
+                        <div class="skill-item skill-python">
+                            <div class="skill-icon"><i class="fab fa-python"></i></div>
+                            <div class="skill-name">Python</div>
+                        </div>
+                        <div class="skill-item skill-r">
+                            <div class="skill-icon"><i class="fab fa-r-project"></i></div>
+                            <div class="skill-name">R</div>
+                        </div>
+                        <div class="skill-item skill-sql">
+                            <div class="skill-icon"><i class="fas fa-database"></i></div>
+                            <div class="skill-name">SQL</div>
+                        </div>
+                        <div class="skill-item skill-nosql">
+                            <div class="skill-icon"><i class="fas fa-leaf"></i></div>
+                            <div class="skill-name">NoSQL</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Frameworks & ML -->
+                <div class="skills-group">
+                    <div class="skills-group-title">Frameworks & ML</div>
+                    <div class="skills-group-items">
+                        <div class="skill-item skill-tensorflow">
+                            <div class="skill-icon"><i class="fas fa-brain"></i></div>
+                            <div class="skill-name">TensorFlow</div>
+                        </div>
+                        <div class="skill-item skill-scikit">
+                            <div class="skill-icon"><i class="fas fa-robot"></i></div>
+                            <div class="skill-name">Scikit-learn</div>
+                        </div>
+                        <div class="skill-item skill-pytorch">
+                            <div class="skill-icon"><i class="fas fa-fire"></i></div>
+                            <div class="skill-name">PyTorch</div>
+                        </div>
+                        <div class="skill-item skill-pandas">
+                            <div class="skill-icon"><i class="fas fa-table"></i></div>
+                            <div class="skill-name">Pandas</div>
+                        </div>
+                        <div class="skill-item skill-numpy">
+                            <div class="skill-icon"><i class="fas fa-calculator"></i></div>
+                            <div class="skill-name">NumPy</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Visualización -->
+                <div class="skills-group">
+                    <div class="skills-group-title">Visualización</div>
+                    <div class="skills-group-items">
+                        <div class="skill-item skill-matplotlib">
+                            <div class="skill-icon"><i class="fas fa-chart-line"></i></div>
+                            <div class="skill-name">Matplotlib</div>
+                        </div>
+                        <div class="skill-item skill-seaborn">
+                            <div class="skill-icon"><i class="fas fa-chart-bar"></i></div>
+                            <div class="skill-name">Seaborn</div>
+                        </div>
+                        <div class="skill-item skill-plotly">
+                            <div class="skill-icon"><i class="fas fa-chart-area"></i></div>
+                            <div class="skill-name">Plotly</div>
+                        </div>
+                        <div class="skill-item skill-powerbi">
+                            <div class="skill-icon"><i class="fas fa-chart-pie"></i></div>
+                            <div class="skill-name">Power BI</div>
+                        </div>
+                        <div class="skill-item skill-tableau">
+                            <div class="skill-icon"><i class="fas fa-chart-column"></i></div>
+                            <div class="skill-name">Tableau</div>
+                        </div>
+                        <div class="skill-item skill-jupyter">
+                            <div class="skill-icon"><i class="fas fa-book"></i></div>
+                            <div class="skill-name">Jupyter</div>
+                        </div>
+                        <div class="skill-item skill-streamlit">
+                            <div class="skill-icon"><i class="fas fa-rocket"></i></div>
+                            <div class="skill-name">Streamlit</div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Cloud & DevOps -->
+                <div class="skills-group">
+                    <div class="skills-group-title">Cloud & DevOps</div>
+                    <div class="skills-group-items">
+                        <div class="skill-item skill-aws">
+                            <div class="skill-icon"><i class="fab fa-aws"></i></div>
+                            <div class="skill-name">AWS</div>
+                        </div>
+                        <div class="skill-item skill-gcp">
+                            <div class="skill-icon"><i class="fab fa-google"></i></div>
+                            <div class="skill-name">Google Cloud</div>
+                        </div>
+                        <div class="skill-item skill-bigquery">
+                            <div class="skill-icon"><i class="fab fa-google"></i></div>
+                            <div class="skill-name">BigQuery</div>
+                        </div>
+                        <div class="skill-item skill-firebase">
+                            <div class="skill-icon"><i class="fas fa-fire"></i></div>
+                            <div class="skill-name">Firebase</div>
+                        </div>
+                        <div class="skill-item skill-docker">
+                            <div class="skill-icon"><i class="fab fa-docker"></i></div>
+                            <div class="skill-name">Docker</div>
+                        </div>
+                        <div class="skill-item skill-git">
+                            <div class="skill-icon"><i class="fab fa-git-alt"></i></div>
+                            <div class="skill-name">Git</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
